force-app/main/default/objects/Student__c/fields/Account_Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Parent_Name__c</fullName>
    <formula>Department__r.Account__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Parent Name</label>
    <type>Text</type>
</CustomField>