force-app/main/default/objects/Student__c/fields/Blog__c.field-meta.xml
<CustomField>
    <fullName>Blog__c</fullName>
    <label>Blog</label>
    <type>Url</type>
</CustomField>