force-app/main/default/objects/Student__c/fields/Date_Of_Exit__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Exit__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Date Of Exit</label>
    <type>DateTime</type>
</CustomField>