force-app/main/default/objects/Student__c/fields/Dept_Owner__c.field-meta.xml
<CustomField>
    <fullName>Dept_Owner__c</fullName>
    <formula>Department__r.Owner:User.FirstName  &amp;  Department__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dept Owner</label>
    <type>Text</type>
</CustomField>