force-app/main/default/objects/Student__c/fields/English__c.field-meta.xml
<CustomField>
    <fullName>English__c</fullName>
    <label>English</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>