force-app/main/default/objects/Student__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please Check if student is active if not uncheck.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>