force-app/main/default/objects/Student__c/fields/No_Of_Leaves__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Leaves__c</fullName>
    <label>No Of Leaves</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>