force-app/main/default/objects/Student__c/fields/Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Name__c</fullName>
    <label>Parent Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>