force-app/main/default/objects/Student__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <formula>IF(AND(English__c &gt;= 35,Maths__c &gt;=35,Physics__c &gt;=35),
&apos;Pass&apos;, 
&apos;Fail&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result</label>
    <type>Text</type>
</CustomField>