force-app/main/default/objects/Student__c/fields/Sum_of_marks__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_marks__c</fullName>
    <formula>English__c  +  Physics__c + Maths__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum  of marks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>